[package]
name = "lis2mdl-rs"
version = "2.0.0"
edition = "2024"
rust-version = "1.85.1"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "magnetometer", "3-axis", "low-power"]
repository = "https://github.com/STMicroelectronics/lis2mdl-rs"
description = """
    Platform-agnostic driver for the LIS2MDL ultra-low-power, high-performance 3-axis digital
    magnetic sensor with I2C and SPI interfaces.
"""

[lib]
doctest = false

[dependencies]
bisync = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
bitfield-struct = "0.10.0"
st-mems-bus = "2.0.0"
derive_more = { version = "2.0.1", default-features = false, features = ["try_from"] }
st-mem-bank-macro = "2.0.0"

# By default the bit order is assumed as Least Significant Bit.
[features]
default = ["async"]
async = []
blocking = []
bit_order_msb = []
